--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="app-container">
+        <div class="container">
         <div class="main-chat">
             <div class="title-bar">
                 <div class="title-info">
@@ -17,6 +18,10 @@
                     <div id="connectionStatus" class="connection-status disconnected">
                         Disconnected
                     </div>
+        <div id="childPanel" class="child-panel">
+            <!-- Child Panel will be rendered here -->
+        </div>
+    </div>
                 </div>
             </div>
             <div class="message-area-container">
