--- a/assets/index.html
+++ b/assets/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="app-container">
         <div class="container">
@@ -32,7 +30,7 @@
                     <div class="input-container">
                         <textarea id="messageInput" class="message-input"
                             placeholder="Type your message... (Shift+Enter for new line)" rows="1"></textarea>
-                        <button onclick="sendMessage()" class="send-button">
+                        <button id="sendButton" class="send-button">
                             Send
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                 <path d="M5 12h14m-6-6l6 6-6 6" stroke-width="2" stroke-linecap="round" />
@@ -48,5 +46,4 @@
     </div>
     <script src="chat.js"></script>
 </body>
-
 </html>
