--- a/assets/index.html
+++ b/assets/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Chat</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="app">
         <main class="chat-container">
             <header class="header">
                 <div class="header-title">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
                     </svg>
                     <span>Chat Interface</span>
                 </div>
@@ -25,8 +27,9 @@
             <div class="messages-container" id="messagesContainer">
                 <!-- Messages will be rendered here -->
                 <div class="empty-state">
-                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="mx-auto mb-4">
-                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        class="mx-auto mb-4">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
                     </svg>
                     <p>No messages yet</p>
                     <p class="text-sm">Start a conversation!</p>
@@ -35,16 +38,12 @@
 
             <div class="input-container">
                 <div class="input-wrapper">
-                    <textarea 
-                        id="messageInput"
-                        class="message-input"
-                        placeholder="Type your message... (Shift+Enter for new line)"
-                        rows="1"
-                    ></textarea>
+                    <textarea id="messageInput" class="message-input"
+                        placeholder="Type your message... (Shift+Enter for new line)" rows="1"></textarea>
                     <button id="sendButton" class="send-button" disabled>
                         Send
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M5 12h14m-6-6l6 6-6 6" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M5 12h14m-6-6l6 6-6 6" stroke-width="2" stroke-linecap="round" />
                         </svg>
                     </button>
                 </div>
@@ -59,16 +58,16 @@
             <div class="panel-header">
                 <div class="panel-title">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                        <circle cx="9" cy="7" r="4"/>
-                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                        <circle cx="9" cy="7" r="4" />
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75" />
                     </svg>
                     Actor Management
                 </div>
                 <button id="collapseButton" class="collapse-button">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M18 6L6 18M6 6l12 12"/>
+                        <path d="M18 6L6 18M6 6l12 12" />
                     </svg>
                 </button>
             </div>
@@ -76,8 +75,9 @@
                 <div class="section">
                     <button class="section-header" onclick="toggleSection('availableActors')">
                         <h3 class="section-title">Available Actors</h3>
-                        <svg class="section-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M6 9l6 6 6-6"/>
+                        <svg class="section-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2">
+                            <path d="M6 9l6 6 6-6" />
                         </svg>
                     </button>
                     <div id="availableActors" class="section-content">
@@ -87,8 +87,9 @@
                 <div class="section">
                     <button class="section-header" onclick="toggleSection('runningActors')">
                         <h3 class="section-title">Running Actors</h3>
-                        <svg class="section-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M6 9l6 6 6-6"/>
+                        <svg class="section-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2">
+                            <path d="M6 9l6 6 6-6" />
                         </svg>
                     </button>
                     <div id="runningActors" class="section-content">
@@ -97,16 +98,8 @@
                 </div>
             </div>
         </aside>
-
-        <button id="togglePanelButton" class="toggle-panel-button">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                <circle cx="9" cy="7" r="4"/>
-                <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-            </svg>
-        </button>
     </div>
     <script src="chat.js"></script>
 </body>
+
 </html>
