--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <div class="app">
+        <button id="expandButton" class="expand-button">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M15 19l-7-7 7-7" />
+            </svg>
+            Actors
+        </button>
         <main class="chat-container">
             <header class="header">
                 <div class="header-title">
