refactor(ui): update header layout and add head ID display

--- a/assets/index.html
+++ b/assets/index.html
@@ -18,15 +18,12 @@
         </button>
         <main class="chat-container">
             <header class="header">
-                <div class="header-title">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
-                    </svg>
-                    <span>Chat Interface</span>
-                </div>
-                <div id="connectionStatus" class="connection-status disconnected">
-                    <div class="status-indicator"></div>
-                    <span>Disconnected</span>
+                <div class="header-content">
+                    <div id="connectionStatus" class="connection-status disconnected">
+                        <div class="status-indicator"></div>
+                        <span>Disconnected</span>
+                    </div>
+                    <div id="headId" class="head-id"></div>
                 </div>
             </header>
 
