feat: add total cost tracking and display

--- a/assets/index.html
+++ b/assets/index.html
@@ -24,6 +24,10 @@
                         <span>Disconnected</span>
                     </div>
                     <div id="headId" class="head-id"></div>
+                    <div id="totalCost" class="total-cost">
+                        <span class="cost-label">Total Cost:</span>
+                        <span class="cost-value">$0.0000</span>
+                    </div>
                 </div>
             </header>
 
