feat(http): refactor HTTP handlers with improved error handling and code structure

--- a/assets/index.html
+++ b/assets/index.html
@@ -103,6 +103,14 @@
             </div>
         </main>
 
+        <!-- Toggle Button for Actor Panel -->
+        <button id="expandButton" class="expand-button">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="15 18 9 12 15 6"></polyline>
+            </svg>
+            Actors
+        </button>
+
         <!-- Actor Panel (Right Sidebar) -->
         <aside id="actorPanel" class="actor-panel">
             <div class="panel-header">
