--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Chat</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -52,7 +52,8 @@
                 <div class="header-content">
                     <div id="currentChatName" class="current-chat-name" title="Click to edit chat name"></div>
                     <button id="branchChatButton" class="branch-chat-button">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
                             <path d="M6 3v12"></path>
                             <path d="M18 9a3 3 0 0 0 0 6"></path>
                             <path d="M6 15a3 3 0 0 0 0 6"></path>
@@ -88,11 +89,13 @@
             <div class="input-container">
                 <div class="input-wrapper">
                     <textarea id="messageInput" class="message-input"
-                        placeholder="Type your message... (Press Enter for new line, Shift+Enter to send)" rows="1"></textarea>
+                        placeholder="Type your message... (Press Enter for new line, Shift+Enter to send)"
+                        rows="1"></textarea>
                     <button id="generateButton" class="generate-button" disabled>
                         Generate
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M21 12s-2.036-5-10-5-10 5-10 5 2.036 5 10 5 10-5 10-5z" stroke-width="2" stroke-linecap="round" />
+                            <path d="M21 12s-2.036-5-10-5-10 5-10 5 2.036 5 10 5 10-5 10-5z" stroke-width="2"
+                                stroke-linecap="round" />
                             <circle cx="12" cy="12" r="3" stroke-width="2" stroke-linecap="round" />
                         </svg>
                     </button>
