--- a/assets/index.html
+++ b/assets/index.html
@@ -91,12 +91,7 @@
                     <textarea id="messageInput" class="message-input"
                         placeholder="Type your message... (Press Enter for new line, Shift+Enter to send)"
                         rows="1"></textarea>
-                    <div class="model-selector-container">
-                        <select id="modelSelector" class="model-selector">
-                            <option value="claude-3-7-sonnet-20250219">Claude 3.7 Sonnet</option>
-                            <!-- Other models will be populated dynamically -->
-                        </select>
-                    </div>
+                        <!-- Remove model selector from input area as it's now in the sidebar -->
                     <button id="generateButton" class="generate-button" disabled>
                         Generate
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -118,6 +113,73 @@
                 <div class="loading-spinner"></div>
             </div>
         </main>
+
+        <!-- Chat Controls Sidebar -->
+        <aside id="chatControlsSidebar" class="chat-controls-sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-title">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 20h9"></path>
+                        <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                    </svg>
+                    Controls
+                </div>
+                <button id="collapseChatControlsButton" class="collapse-button">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                </button>
+            </div>
+            <div class="sidebar-content">
+                <!-- Model Selection Section -->
+                <div class="controls-section">
+                    <h3 class="section-title">Model Selection</h3>
+                    <div class="control-group">
+                        <label for="controlsModelSelector">AI Model:</label>
+                        <select id="controlsModelSelector" class="controls-model-selector">
+                            <option value="claude-3-7-sonnet-20250219">Claude 3.7 Sonnet</option>
+                            <!-- Other models will be populated dynamically -->
+                        </select>
+                    </div>
+                    <div class="model-info" id="modelInfo">
+                        <div class="model-info-item">
+                            <span class="info-label">Context Window:</span>
+                            <span class="info-value" id="modelContextWindow">8,192 tokens</span>
+                        </div>
+                        <div class="model-info-item">
+                            <span class="info-label">Cost:</span>
+                            <span class="info-value">$3.00 / $15.00 per 1M tokens (in/out)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Future Controls Section Placeholder -->
+                <div class="controls-section">
+                    <h3 class="section-title">Session Stats</h3>
+                    <div class="stats-group">
+                        <div class="stat-item">
+                            <span class="stat-label">Total Messages:</span>
+                            <span class="stat-value" id="statsMessageCount">0</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Total Tokens:</span>
+                            <span class="stat-value" id="statsTokenCount">0</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Total Cost:</span>
+                            <span class="stat-value" id="statsTotalCost">$0.0000</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
+        <!-- Toggle Button for Chat Controls Sidebar -->
+        <button id="expandChatControlsButton" class="expand-chat-controls-button">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="15 18 9 12 15 6"></polyline>
+            </svg>
+        </button>
     </div>
     <script src="chat.js"></script>
 </body>
