Based on the changes, here's a concise commit message following conventional commits format:
```
feat(build): add esbuild bundling and frontend dev workflow
```

This commit message captures the key changes:
- Added frontend JavaScript bundling with esbuild
- Introduced a development workflow for frontend
- Updated build and serving mechanisms for JavaScript files

--- a/assets/index.html
+++ b/assets/index.html
@@ -91,7 +91,6 @@
                     <textarea id="messageInput" class="message-input"
                         placeholder="Type your message... (Press Enter for new line, Shift+Enter to send)"
                         rows="1"></textarea>
-                        <!-- Remove model selector from input area as it's now in the sidebar -->
                     <button id="generateButton" class="generate-button" disabled>
                         Generate
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -181,6 +180,7 @@
             </svg>
         </button>
     </div>
+    <!-- Load bundled JavaScript file -->
     <script src="chat.js"></script>
 </body>
 
